// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Button component with props render add-comment Button component  1`] = `
<Button
  labelText="UL"
  type="add-comment"
>
  <span
    className="btn-element small"
    id="add-comment"
  >
    <svg
      fill="white"
      height="10px"
      id="Capa_1"
      version="1.1"
      viewBox="0 0 512 512"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M149.776,512c-0.001,0-0.001,0-0.003,0c-24.787,0-46.285-15.947-53.493-39.68L21.393,225.792                        c-4.342-14.293-2.857-29.421,4.179-42.598c7.037-13.177,18.783-22.824,33.076-27.165l287.329-87.281                        c5.297-1.61,10.772-2.425,16.268-2.425c24.788,0,46.285,15.947,53.495,39.68l74.888,246.528                        c8.961,29.506-7.751,60.801-37.255,69.763l-287.329,87.281C160.747,511.185,155.273,512,149.776,512z M362.246,94.685                        c-2.701,0-5.403,0.404-8.025,1.201l-287.33,87.281c-7.044,2.14-12.832,6.893-16.301,13.388c-3.467,6.493-4.199,13.95-2.059,20.994                        l74.888,246.528c3.498,11.518,14.336,19.561,26.357,19.561h0.001c2.701,0,5.402-0.404,8.024-1.201l287.329-87.281                        c14.541-4.417,22.777-19.841,18.36-34.383l-74.888-246.526C385.104,102.728,374.267,94.685,362.246,94.685z"
        />
        <path
          d="M120.999,295.547c-6.081,0-11.704-3.942-13.563-10.063c-2.276-7.495,1.953-15.415,9.447-17.691                        l240.921-73.184c7.492-2.275,15.412,1.953,17.691,9.447c2.276,7.495-1.953,15.415-9.447,17.691l-240.921,73.184                        C123.753,295.349,122.365,295.547,120.999,295.547z"
        />
        <path
          d="M148.148,384.92c-6.081,0-11.704-3.942-13.563-10.063c-2.276-7.495,1.953-15.415,9.447-17.691                        l240.921-73.184c7.493-2.272,15.413,1.953,17.691,9.447c2.277,7.495-1.953,15.415-9.447,17.691l-240.922,73.184                        C150.901,384.721,149.514,384.92,148.148,384.92z"
        />
      </g>
      <path
        d="M162.958,124.569l5.309-48.334c0.838-7.629-5.136-14.294-12.811-14.294h-0.007                    c-7.117,0-12.888-5.77-12.888-12.888V27.071c0-7.117,5.77-12.888,12.888-12.888l111.756-0.003c7.117,0,12.888,5.77,12.888,12.888                    v21.985c0,7.119-5.77,12.888-12.889,12.888l0,0c-7.675-0.001-13.651,6.665-12.813,14.294l5.309,48.333                    c0.838,7.629-5.136,14.294-12.811,14.294h-71.123C168.093,138.863,162.119,132.197,162.958,124.569z"
      />
      <g>
        <path
          d="M246.891,153.044L246.891,153.044h-71.122c-7.683,0-15.03-3.281-20.157-9.003                        c-5.128-5.722-7.588-13.384-6.75-21.022l5.156-46.939c-14.265-0.75-25.635-12.587-25.635-27.03V27.069                        C128.383,12.143,140.526,0,155.452,0h111.753c14.925,0,27.069,12.143,27.069,27.069v21.985c0,14.443-11.372,26.282-25.631,27.032                        l5.156,46.936c0.838,7.638-1.622,15.3-6.75,21.02S254.574,153.044,246.891,153.044z M177.212,124.682h68.235l-5.152-46.899                        c-0.84-7.635,1.619-15.297,6.747-21.019c4.84-5.402,11.658-8.628,18.869-8.974V28.362l-109.167,0.001v19.424                        c7.215,0.346,14.032,3.572,18.872,8.972c5.126,5.722,7.587,13.384,6.749,21.022L177.212,124.682z"
        />
        <path
          d="M211.327,203.734c-7.831,0-14.181-6.349-14.181-14.181v-50.69c0-7.832,6.35-14.181,14.181-14.181                        s14.181,6.349,14.181,14.181v50.688C225.508,197.384,219.16,203.734,211.327,203.734z"
        />
      </g>
    </svg>
  </span>
</Button>
`;

exports[`Testing Button component with props render backward-nav-active Button component   1`] = `
<Button
  labelText="UL"
  type="backward-nav-active"
>
  <span
    className="btn-element"
    id="backward-nav-active"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render close-container Button component   1`] = `
<Button
  labelText="UL"
  type="close-container"
>
  <span
    className="btn-element"
    id="close-container"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render color-palette Button component   1`] = `
<Button
  labelText="UL"
  type="color-palette"
>
  <span
    className="btn-element"
    id="color-palette"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render comment-flag Button component   1`] = `
<Button
  labelText="UL"
  type="comment-flag"
>
  <span
    className="btn-element small"
    id="flag-icon"
  >
    <svg
      fill="white"
      height="10px"
      id="Capa_1"
      version="1.1"
      viewBox="0 0 32 32"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h4v32h-4v-32z"
      />
      <path
        d="M26 20.094c2.582 0 4.83-0.625 6-1.547v-16c-1.17 0.922-3.418 1.547-6 1.547s-4.83-0.625-6-1.547v16c1.17 0.922 3.418 1.547 6 1.547z"
      />
      <path
        d="M19 1.016c-1.466-0.623-3.61-1.016-6-1.016-3.012 0-5.635 0.625-7 1.547v16c1.365-0.922 3.988-1.547 7-1.547 2.39 0 4.534 0.393 6 1.016v-16z"
      />
    </svg>
  </span>
</Button>
`;

exports[`Testing Button component with props render delete-element Button component   1`] = `
<Button
  labelText="UL"
  type="delete-element"
>
  <span
    className="btn-element"
    id="delete-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render element-label Button component   1`] = `
<Button
  labelText="UL"
  type="element-label"
>
  <span
    className="btn-element"
    id="element-label"
  >
    UL
  </span>
</Button>
`;

exports[`Testing Button component with props render expand Button component   1`] = `
<Button
  labelText="UL"
  type="expand"
>
  <span
    className="btn-element"
    id="expand-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render forward-nav-active Button component   1`] = `
<Button
  labelText="UL"
  type="forward-nav-active"
>
  <span
    className="btn-element"
    id="forward-nav-active"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render split Button component  1`] = `
<Button
  labelText="UL"
  type="split"
>
  <span
    className="btn-element"
    id="split-icon"
  >
    <img
      src={
        Object {
          "process": [Function],
        }
      }
    />
  </span>
</Button>
`;

exports[`Testing Button component with props render tcm Button component   1`] = `
<Button
  labelText="UL"
  type="tcm"
>
  <span
    className="btn-element small"
    id="tcm-icon"
  >
    <svg
      fill="white"
      height="10px"
      id="Capa_1"
      version="1.1"
      viewBox="0 0 24 24"
      width="10px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 14v-2.47l6.88-6.88c.2-.2.51-.2.71 0l1.77 1.77c.2.2.2.51 0 .71L8.47 14H6zm12 0h-7.5l2-2H18v2z"
      />
    </svg>
  </span>
</Button>
`;
